[package]
name = "fast-manga-image"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.1.1"
image = "0.25.9"
minifb = "0.28.0"

[[bin]]
name = "fmi"
path = "src/main.rs"

[[bin]]
name = "encode"
path = "src/encode.rs"

[[bin]]
name = "decode"
path = "src/decode.rs"

[[bin]]
name = "decode_frames"
path = "src/decode_frames.rs"
